# Jeve

./: .gitignore  CMakeLists.txt  README.md  jeve  known_issues.txt  logical_simple.jeve  memory_recommendations.txt  memory_usage.csv  printing_test.jeve  test_jeve.ipynb
.cache/src/: main.cpp
.cache/src/interpreter/: ASTNode.hpp  Forward.hpp  GarbageCollector.cpp  JeveInterpreter.cpp  JeveInterpreter.hpp  Object.hpp  Value.hpp
.github/workflows/: cmake-multi-platform.yml
examples/: array_memory.jeve  broken_value.txt  calculator.jeve  debug_memory.jeve  error.jeve  features.jeve  gc_test_churn.jeve  gc_test_manual_gc.jeve  gc_test_nested.jeve  gc_test_simple.jeve  hello.jeve  loops.jeve  memory_test.jeve  minimal_array.jeve  minimal_test.jeve  runtime_object_creation_insert_delete.jeve  simple_memory_test.jeve  single_array_test.jeve  super_minimal_array.jeve  test.jeve  variables.jeve  very_minimal_test.jeve
src/: main.cpp
src/interpreter/: ASTNode.hpp  ArrayNode.hpp  Forward.hpp  GarbageCollector.cpp  GarbageCollector.hpp  JeveInterpreter.cpp  JeveInterpreter.hpp  Object.hpp  ObjectPool.hpp  SymbolTable.hpp  Value.hpp
src/interpreter/ast/: ASTNode.hpp  ArrayFunctionNodes.cpp  ArrayFunctionNodes.hpp  ArrayNodes.cpp  ArrayNodes.hpp  AssignmentNode.hpp  BasicNodes.hpp  ConcatNode.hpp  ControlFlowNodes.cpp  ControlFlowNodes.hpp  FunctionNodes.cpp  FunctionNodes.hpp  GCNodes.cpp  GCNodes.hpp  IONodes.cpp  IONodes.hpp  OperatorNodes.cpp  OperatorNodes.hpp  PropertyAccessNode.hpp  SmartLoopNode.hpp
test_features/: comparisons.jeve  conditionals.jeve  gc_loop_test.jeve  logical_operators.jeve  loops.jeve  memory_test.jeve  test_array.jeve  variables_calc.jeve
tests/: array_memory_test.jeve  basic_sequential_test.jeve  dummy_array_test.jeve  minimal_array.jeve  no_array_test.jeve  objects_count_test.jeve  sequential_allocation_test.jeve  simple_array_test.jeve  simplified_value_test.jeve  super_minimal_test.jeve
